Css/style.css
    /*----------------------------------------------------------------------------------------------------------------------- *\
 BASE
\*----------------------------------------------------------------------------------------------------------------------- */
/* Reset */
* {
  box-sizing: border-box; }

body,
legend,
fieldset {
  margin: 0;
  padding: 0; }

fieldset {
  border: 0; }

/* Typographic elements */
h1 {
  color: white; }

h2,
legend {
  color: #212B34; }

h2 {
  margin-bottom: 12px; }

p {
  color: #91979D; }

legend {
  margin-bottom: 24px;
  display: inline-block;
  width: 100%; }
  legend:before {
    content: "";
    display: block;
    height: 2px;
    width: 100%;
    background-color: #212B34;
    margin-bottom: 24px; }

label {
  display: inline-block;
  margin-bottom: 12px; }

p.descriptive-label {
  color: #212B34;
  margin: 0 0 12px 0; }

/* Input types */
select,
textarea,
input {
  border: none;
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none; }

select,
textarea,
input:not([type='radio']),
input:not([type='checkbox']) {
  display: block;
  width: 100%;
  height: 50px;
  border-radius: 4px; }

input[type='number'],
input[type='text'],
input[type='tel'],
input[type='email'],
input[type='date'],
select {
  margin-bottom: 20px;
  padding: 0 14px;
  color: #91979D; }
  input[type='number']:last-child,
  input[type='text']:last-child,
  input[type='tel']:last-child,
  input[type='email']:last-child,
  input[type='date']:last-child,
  select:last-child {
    margin-bottom: 0; }

input[type="date"] {
  background: url(../Images/icon-calendar.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-position: right 12px center;
  background-size: 16px;
  vertical-align: bottom; }
  input[type="date"]::-webkit-calendar-picker-indicator {
    color: transparent;
    background-color: transparent;
    height: 8px;
    width: 8px;
    z-index: 0; }
  input[type="date"]::-webkit-inner-spin-button {
    display: none; }

select {
  background: url(../Images/icon-arrow-dwn.svg);
  background-color: #EBECEE;
  background-repeat: no-repeat;
  background-position: right 10px center;
  background-size: 16px; }

select,
textarea,
input:not([type='submit']) {
  border: 2px solid #EBECEE;
  background-color: #EBECEE; }

input#habitat-zip-code {
  width: 150px; }

/* Radio's and checkboxes */
input[type='radio'],
input[type='checkbox'] {
  display: inline-block;
  width: 20px;
  height: 20px; }
  input[type='radio'] + label,
  input[type='checkbox'] + label {
    position: relative;
    top: -5px;
    margin-bottom: 10px;
    margin-left: 10px; }

input[type='radio'] {
  border-radius: 100%; }

/* Comment box */
textarea {
  padding: 16px;
  height: 100px; }

/* Submit button */
input[type='submit'] {
  background-color: #42AFA5; }

/*----------------------------------------------------------------------------------------------------------------------- *\
 MODULES
\*----------------------------------------------------------------------------------------------------------------------- */
/* Header */
header.page-header {
  background-color: #212B34; }
  header.page-header h1 {
    margin: 0; }

/* Intro */
section.form-intro {
  padding-bottom: 24px; }

/* Form */
form.form-wrapper {
  padding-top: 3px;
  border-top: 4px solid #212B34; }

/* Form fieldsets */
fieldset.form-fieldset {
  padding-bottom: 32px; }
  fieldset.form-fieldset div[id$='-group'] {
    margin-bottom: 16px; }
    fieldset.form-fieldset div[id$='-group']:last-child {
      margin-bottom: 0; }

/* Footer */
footer.page-footer {
  padding-bottom: 200px; }
  footer.page-footer .footer-logo {
    width: 50px; }

/*----------------------------------------------------------------------------------------------------------------------- *\
 STATES
\*----------------------------------------------------------------------------------------------------------------------- */
/* Transitions */
input:not([type='submit']),
select,
textarea {
  -webkit-transition: border-color 0.3s, background-color 0.3s, color 0.3s, box-shadow 0.3s;
  transition: border-color 0.3s, background-color 0.3s, color 0.3s, box-shadow 0.3s; }

input[type='submit'] {
  -webkit-transition: background-color 0.3s, color 0.3s;
  transition: background-color 0.3s, color 0.3s; }

/* Checked + focus states */
input[type='radio']:checked,
input[type='checkbox']:checked,
input[type='radio']:focus,
input[type='checkbox']:focus,
select:focus,
input[type='number']:focus,
input[type='text']:focus,
input[type='tel']:focus,
input[type='email']:focus,
input[type='date']:focus,
textarea:focus {
  border-color: #375478;
  outline: 0; }

input[type='radio']:checked,
input[type='checkbox']:checked,
select:focus,
input:focus {
  padding: 0 14px; }

input[type='radio']:checked,
input[type='checkbox']:checked,
input[type='radio']:focus,
input[type='checkbox']:focus {
  padding: 0; }

textarea:focus {
  padding: 14px; }

input[type='submit']:focus {
  outline: 0;
  background-color: #375478; }

/* Hover states */
input[type='radio']:hover,
input[type='checkbox']:hover,
input[type='radio']:hover,
input[type='checkbox']:hover,
select:hover,
input[type='number']:hover,
input[type='text']:hover,
input[type='tel']:hover,
input[type='email']:hover,
input[type='date']:hover,
textarea:hover {
  color: white;
  border-color: #91979D;
  background-color: #91979D; }
/* ... */

